// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XYChart - debug state line chart rotation: -90 1`] = `
{
  "annotations": [],
  "areas": [],
  "axes": {
    "x": [
      {
        "gridlines": [
          {
            "x": 0,
            "y": 0,
          },
          {
            "x": 0,
            "y": 18.199999999999996,
          },
          {
            "x": 0,
            "y": 36.39999999999999,
          },
          {
            "x": 0,
            "y": 54.60000000000001,
          },
          {
            "x": 0,
            "y": 72.8,
          },
          {
            "x": 0,
            "y": 91,
          },
          {
            "x": 0,
            "y": 109.2,
          },
          {
            "x": 0,
            "y": 127.39999999999999,
          },
          {
            "x": 0,
            "y": 145.6,
          },
          {
            "x": 0,
            "y": 163.8,
          },
          {
            "x": 0,
            "y": 182,
          },
        ],
        "id": "xAxis",
        "labels": [
          "0",
          "1",
          "2",
          "3",
          "4",
          "5",
          "6",
          "7",
          "8",
          "9",
          "10",
        ],
        "position": "left",
        "title": undefined,
        "values": [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
        ],
      },
    ],
    "y": [
      {
        "gridlines": [
          {
            "x": 0,
            "y": 0,
          },
          {
            "x": 36.39999999999999,
            "y": 0,
          },
          {
            "x": 72.8,
            "y": 0,
          },
          {
            "x": 109.2,
            "y": 0,
          },
          {
            "x": 145.6,
            "y": 0,
          },
          {
            "x": 182,
            "y": 0,
          },
        ],
        "id": "yAxis",
        "labels": [
          "0",
          "2",
          "4",
          "6",
          "8",
          "10",
        ],
        "position": "bottom",
        "title": undefined,
        "values": [
          0,
          2,
          4,
          6,
          8,
          10,
        ],
      },
    ],
  },
  "bars": [],
  "legend": {
    "items": [
      {
        "color": "#54B399",
        "key": "groupId{__global__}spec{spec1}yAccessor{1}splitAccessors{}",
        "name": "spec1",
      },
    ],
  },
  "lines": [
    {
      "color": "#54B399",
      "key": "groupId{__global__}spec{spec1}yAccessor{1}splitAccessors{}",
      "name": "spec1",
      "path": "M0,182L72.8,127.39999999999999L182,0",
      "points": [
        {
          "mark": null,
          "x": 0,
          "y": 0,
        },
        {
          "mark": null,
          "x": 4,
          "y": 3,
        },
        {
          "mark": null,
          "x": 10,
          "y": 10,
        },
      ],
      "visible": true,
      "visiblePoints": true,
    },
  ],
}
`;

exports[`XYChart - debug state line chart rotation: 0 1`] = `
{
  "annotations": [],
  "areas": [],
  "axes": {
    "x": [
      {
        "gridlines": [
          {
            "x": 0,
            "y": 0,
          },
          {
            "x": 18.2,
            "y": 0,
          },
          {
            "x": 36.4,
            "y": 0,
          },
          {
            "x": 54.6,
            "y": 0,
          },
          {
            "x": 72.8,
            "y": 0,
          },
          {
            "x": 91,
            "y": 0,
          },
          {
            "x": 109.2,
            "y": 0,
          },
          {
            "x": 127.39999999999999,
            "y": 0,
          },
          {
            "x": 145.6,
            "y": 0,
          },
          {
            "x": 163.8,
            "y": 0,
          },
          {
            "x": 182,
            "y": 0,
          },
        ],
        "id": "xAxis",
        "labels": [
          "0",
          "1",
          "2",
          "3",
          "4",
          "5",
          "6",
          "7",
          "8",
          "9",
          "10",
        ],
        "position": "bottom",
        "title": undefined,
        "values": [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
        ],
      },
    ],
    "y": [
      {
        "gridlines": [
          {
            "x": 0,
            "y": 0,
          },
          {
            "x": 0,
            "y": 36.39999999999999,
          },
          {
            "x": 0,
            "y": 72.8,
          },
          {
            "x": 0,
            "y": 109.2,
          },
          {
            "x": 0,
            "y": 145.6,
          },
          {
            "x": 0,
            "y": 182,
          },
        ],
        "id": "yAxis",
        "labels": [
          "0",
          "2",
          "4",
          "6",
          "8",
          "10",
        ],
        "position": "left",
        "title": undefined,
        "values": [
          0,
          2,
          4,
          6,
          8,
          10,
        ],
      },
    ],
  },
  "bars": [],
  "legend": {
    "items": [
      {
        "color": "#54B399",
        "key": "groupId{__global__}spec{spec1}yAccessor{1}splitAccessors{}",
        "name": "spec1",
      },
    ],
  },
  "lines": [
    {
      "color": "#54B399",
      "key": "groupId{__global__}spec{spec1}yAccessor{1}splitAccessors{}",
      "name": "spec1",
      "path": "M0,182L72.8,127.39999999999999L182,0",
      "points": [
        {
          "mark": null,
          "x": 0,
          "y": 0,
        },
        {
          "mark": null,
          "x": 4,
          "y": 3,
        },
        {
          "mark": null,
          "x": 10,
          "y": 10,
        },
      ],
      "visible": true,
      "visiblePoints": true,
    },
  ],
}
`;

exports[`XYChart - debug state line chart rotation: 90 1`] = `
{
  "annotations": [],
  "areas": [],
  "axes": {
    "x": [
      {
        "gridlines": [
          {
            "x": 0,
            "y": 0,
          },
          {
            "x": 0,
            "y": 18.2,
          },
          {
            "x": 0,
            "y": 36.4,
          },
          {
            "x": 0,
            "y": 54.6,
          },
          {
            "x": 0,
            "y": 72.8,
          },
          {
            "x": 0,
            "y": 91,
          },
          {
            "x": 0,
            "y": 109.2,
          },
          {
            "x": 0,
            "y": 127.39999999999999,
          },
          {
            "x": 0,
            "y": 145.6,
          },
          {
            "x": 0,
            "y": 163.8,
          },
          {
            "x": 0,
            "y": 182,
          },
        ],
        "id": "xAxis",
        "labels": [
          "0",
          "1",
          "2",
          "3",
          "4",
          "5",
          "6",
          "7",
          "8",
          "9",
          "10",
        ],
        "position": "left",
        "title": undefined,
        "values": [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
        ],
      },
    ],
    "y": [
      {
        "gridlines": [
          {
            "x": 0,
            "y": 0,
          },
          {
            "x": 36.4,
            "y": 0,
          },
          {
            "x": 72.8,
            "y": 0,
          },
          {
            "x": 109.2,
            "y": 0,
          },
          {
            "x": 145.6,
            "y": 0,
          },
          {
            "x": 182,
            "y": 0,
          },
        ],
        "id": "yAxis",
        "labels": [
          "0",
          "2",
          "4",
          "6",
          "8",
          "10",
        ],
        "position": "bottom",
        "title": undefined,
        "values": [
          0,
          2,
          4,
          6,
          8,
          10,
        ],
      },
    ],
  },
  "bars": [],
  "legend": {
    "items": [
      {
        "color": "#54B399",
        "key": "groupId{__global__}spec{spec1}yAccessor{1}splitAccessors{}",
        "name": "spec1",
      },
    ],
  },
  "lines": [
    {
      "color": "#54B399",
      "key": "groupId{__global__}spec{spec1}yAccessor{1}splitAccessors{}",
      "name": "spec1",
      "path": "M0,182L72.8,127.39999999999999L182,0",
      "points": [
        {
          "mark": null,
          "x": 0,
          "y": 0,
        },
        {
          "mark": null,
          "x": 4,
          "y": 3,
        },
        {
          "mark": null,
          "x": 10,
          "y": 10,
        },
      ],
      "visible": true,
      "visiblePoints": true,
    },
  ],
}
`;

exports[`XYChart - debug state line chart rotation: 180 1`] = `
{
  "annotations": [],
  "areas": [],
  "axes": {
    "x": [
      {
        "gridlines": [
          {
            "x": 0,
            "y": 0,
          },
          {
            "x": 18.199999999999996,
            "y": 0,
          },
          {
            "x": 36.39999999999999,
            "y": 0,
          },
          {
            "x": 54.60000000000001,
            "y": 0,
          },
          {
            "x": 72.8,
            "y": 0,
          },
          {
            "x": 91,
            "y": 0,
          },
          {
            "x": 109.2,
            "y": 0,
          },
          {
            "x": 127.39999999999999,
            "y": 0,
          },
          {
            "x": 145.6,
            "y": 0,
          },
          {
            "x": 163.8,
            "y": 0,
          },
          {
            "x": 182,
            "y": 0,
          },
        ],
        "id": "xAxis",
        "labels": [
          "0",
          "1",
          "2",
          "3",
          "4",
          "5",
          "6",
          "7",
          "8",
          "9",
          "10",
        ],
        "position": "bottom",
        "title": undefined,
        "values": [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
        ],
      },
    ],
    "y": [
      {
        "gridlines": [
          {
            "x": 0,
            "y": 0,
          },
          {
            "x": 0,
            "y": 36.4,
          },
          {
            "x": 0,
            "y": 72.8,
          },
          {
            "x": 0,
            "y": 109.2,
          },
          {
            "x": 0,
            "y": 145.6,
          },
          {
            "x": 0,
            "y": 182,
          },
        ],
        "id": "yAxis",
        "labels": [
          "0",
          "2",
          "4",
          "6",
          "8",
          "10",
        ],
        "position": "left",
        "title": undefined,
        "values": [
          0,
          2,
          4,
          6,
          8,
          10,
        ],
      },
    ],
  },
  "bars": [],
  "legend": {
    "items": [
      {
        "color": "#54B399",
        "key": "groupId{__global__}spec{spec1}yAccessor{1}splitAccessors{}",
        "name": "spec1",
      },
    ],
  },
  "lines": [
    {
      "color": "#54B399",
      "key": "groupId{__global__}spec{spec1}yAccessor{1}splitAccessors{}",
      "name": "spec1",
      "path": "M0,182L72.8,127.39999999999999L182,0",
      "points": [
        {
          "mark": null,
          "x": 0,
          "y": 0,
        },
        {
          "mark": null,
          "x": 4,
          "y": 3,
        },
        {
          "mark": null,
          "x": 10,
          "y": 10,
        },
      ],
      "visible": true,
      "visiblePoints": true,
    },
  ],
}
`;
